Modify choose stock logic

--- a/CrawlAndCount.ipynb
+++ b/CrawlAndCount.ipynb
@@ -2,22 +2,53 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "32b932cbea974bbab5be0e29b57d3b18",
+       "model_id": "0067e89e510649b0b4ee072adf84de3b",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "VBox(children=(Label(value='price (from 2020-12-01 to 2021-05-28)'), HBox(children=(DatePicker(value=datetime.…"
+       "VBox(children=(Label(value='price (from 2020-01-02 to 2021-06-01)'), HBox(children=(DatePicker(value=datetime.…"
       ]
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "start crawl price from  2021-06-01 to 2021-06-02\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "ed588c78df504855885cd95dba25f409",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/2 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "crawling 2021-06-01\n",
+      "success\n",
+      "crawling 2021-06-02\n",
+      "success\n"
+     ]
     }
    ],
    "source": [
@@ -42,20 +73,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
-   "metadata": {},
+   "execution_count": 8,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2021-05-30\n",
-      "和泰車(564.0): https://goodinfo.tw/StockInfo/StockDetail.asp?STOCK_ID=2207\n",
-      "南亞科(80.6): https://goodinfo.tw/StockInfo/StockDetail.asp?STOCK_ID=2408\n",
-      "新光金(9.93): https://goodinfo.tw/StockInfo/StockDetail.asp?STOCK_ID=2888\n",
-      "大成鋼(44.95): https://goodinfo.tw/StockInfo/StockDetail.asp?STOCK_ID=2027\n",
-      "京城銀(41.3): https://goodinfo.tw/StockInfo/StockDetail.asp?STOCK_ID=2809\n",
-      "臻鼎-KY(97.0): https://goodinfo.tw/StockInfo/StockDetail.asp?STOCK_ID=4958\n"
+      "2021-06-02\n",
+      "# 20 日線的股票\n"
      ]
     }
    ],
@@ -144,9 +172,183 @@
     "\n",
     "\n",
     "print(datetime.date.today())\n",
+    "print(\"# 20 日線的股票\")\n",
     "for stockId in allStockList:\n",
     "    if(breakthrough20StockList[stockId]):\n",
     "        print(allStockList[stockId]+\"(\"+ str(price1[stockId].mean())+\"): \"+\"https://goodinfo.tw/StockInfo/StockDetail.asp?STOCK_ID=\" + stockId)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2021-06-02\n",
+      "# KD 20 選股法\n",
+      "End\n"
+     ]
+    }
+   ],
+   "source": [
+    "# KD 20 選股法\n",
+    "import talib\n",
+    "import pandas as pd\n",
+    "\n",
+    "# 從 close, high, low 取從最新的一筆資料往前算，2000筆資料\n",
+    "close = data.get('收盤價', 300)\n",
+    "high = data.get('最高價', 300)\n",
+    "low = data.get('最低價', 300)\n",
+    "\n",
+    "# 利用 talib 來計算 0050 這檔股票的指標\n",
+    "print(datetime.date.today())\n",
+    "print(\"# KD 20 選股法\")\n",
+    "for stockId in allStockList:\n",
+    "    kd = talib.STOCH(high[stockId].ffill().values, \n",
+    "                 low[stockId].ffill().values, \n",
+    "                 close[stockId].ffill().values,\n",
+    "                 fastk_period=9, slowk_period=3\n",
+    "                 , slowd_period=3, slowk_matype=1, slowd_matype=1)\n",
+    "    # 將 kd 值 分別轉換成 k、d 兩條 series\n",
+    "    k = pd.Series(kd[0], index=close[stockId].index)\n",
+    "    d = pd.Series(kd[1], index=close[stockId].index)\n",
+    "\n",
+    "    # & 代表 「且」 的意思，這邊的條件就是\n",
+    "    # k.shift(1) 可以想成「昨天」的意思，同理 k.shift(2) 就是前天\n",
+    "    # 當（今天的 k > d ）且 （昨天的 k < d） 且 （今天的 k < 30） 時，買入\n",
+    "\n",
+    "    buy = (k > d) & (k.shift(1) < d.shift(1)) & (k < 30)\n",
+    "  \n",
+    "    if buy[str(datetime.date.today())]:\n",
+    "        print(allStockList[stockId]+\"(\"+ str(price1[stockId].mean())+\"): \"+\"https://goodinfo.tw/StockInfo/StockDetail.asp?STOCK_ID=\" + stockId)\n",
+    " \n",
+    "print(\"End\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2021-06-02\n",
+      "20 日線停損(跌破 20 日線＆低於買進價 10%)\n",
+      "============================\n",
+      "\n",
+      "kd 停損(低於買進價 15%)\n",
+      "============================\n",
+      "\n",
+      "投機停損(低於買進價 15%)\n",
+      "============================\n",
+      "\n",
+      "20 日線停利(移動式停利，高點跌下來 10%\n",
+      "============================\n",
+      "\n",
+      "kd 停利(KD 死亡交叉，K 大於 80)\n",
+      "============================\n",
+      "\n",
+      "投機停利(移動式停利，高點跌下來 10%)\n",
+      "============================\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 停利 停損計算\n",
+    "\n",
+    "# {股票代號, 買時候的股價}\n",
+    "\n",
+    "# 20 日線 波段股票\n",
+    "bandStockPricePair = {\"2027\" : 48}\n",
+    "\n",
+    "# KD 20 波段股票\n",
+    "kdStockPricePair = {}\n",
+    "\n",
+    "# 投機股票\n",
+    "opportunisticStockPricePair = {\"2610\" : 18 }\n",
+    "\n",
+    "print(datetime.date.today())\n",
+    "# 停損\n",
+    "print(\"20 日線停損(跌破 20 日線＆低於買進價 10%)\")\n",
+    "for stockId in bandStockPricePair:\n",
+    "    below20Price = price1[stockId].mean() < price20[stockId].mean()\n",
+    "    beyond10Percent = price1[stockId].mean() < bandStockPricePair[stockId] * 0.9\n",
+    "    if(below20Price & beyond10Percent):\n",
+    "        print(stockId+\"(\"+ str(price1[stockId].mean())+\"): \"+\"https://goodinfo.tw/StockInfo/StockDetail.asp?STOCK_ID=\" + stockId)\n",
+    "print(\"============================\")    \n",
+    "\n",
+    "\n",
+    "print(\"\")\n",
+    "print(\"kd 停損(低於買進價 15%)\")\n",
+    "for stockId in kdStockPricePair:\n",
+    "    beyond10Percent = price1[stockId].mean() < kdStockPricePair[stockId] * 0.85\n",
+    "    if(beyond10Percent):\n",
+    "        print(stockId+\"(\"+ str(price1[stockId].mean())+\"): \"+\"https://goodinfo.tw/StockInfo/StockDetail.asp?STOCK_ID=\" + stockId)\n",
+    "print(\"============================\")    \n",
+    "\n",
+    "\n",
+    "\n",
+    "print(\"\")\n",
+    "print(\"投機停損(低於買進價 15%)\")\n",
+    "for stockId in opportunisticStockPricePair:\n",
+    "    beyond10Percent = price1[stockId].mean() < opportunisticStockPricePair[stockId] * 0.85\n",
+    "    if(beyond10Percent):\n",
+    "        print(stockId+\"(\"+ str(price1[stockId].mean())+\"): \"+\"https://goodinfo.tw/StockInfo/StockDetail.asp?STOCK_ID=\" + stockId)\n",
+    "print(\"============================\")    \n",
+    "\n",
+    "\n",
+    "\n",
+    "# 停利\n",
+    "# below20Price = price1[bandStockPricePair] < price20[bandStockPricePair]\n",
+    "# print(\"20 日線停利\")\n",
+    "# for stockId in below20Price:\n",
+    "#         print(allStockList[stockId]+\"(\"+ str(price1[stockId].mean())+\"): \"+\"https://goodinfo.tw/StockInfo/StockDetail.asp?STOCK_ID=\" + stockId)\n",
+    "\n",
+    "# print(\"kd 停利\")\n",
+    "\n",
+    "print(\"\")\n",
+    "print(\"20 日線停利(移動式停利，高點跌下來 10%\")\n",
+    "for stockId in bandStockPricePair:\n",
+    "    belowHighest10PercentPrice = price1[stockId].mean() < price20[stockId].max() * 0.9\n",
+    "    if belowHighest10PercentPrice:\n",
+    "        print(stockId+\"(\"+ str(price1[stockId].mean())+\"): \"+\"https://goodinfo.tw/StockInfo/StockDetail.asp?STOCK_ID=\" + stockId)\n",
+    "print(\"============================\")    \n",
+    "\n",
+    "print(\"\")\n",
+    "print(\"kd 停利(KD 死亡交叉，K 大於 80)\")\n",
+    "for stockId in kdStockPricePair:\n",
+    "    kd = talib.STOCH(high[stockId].ffill().values, \n",
+    "                 low[stockId].ffill().values, \n",
+    "                 close[stockId].ffill().values,\n",
+    "                 fastk_period=9, slowk_period=3\n",
+    "                 , slowd_period=3, slowk_matype=1, slowd_matype=1)\n",
+    "    # 將 kd 值 分別轉換成 k、d 兩條 series\n",
+    "    k = pd.Series(kd[0], index=close[stockId].index)\n",
+    "    d = pd.Series(kd[1], index=close[stockId].index)\n",
+    "\n",
+    "    # & 代表 「且」 的意思，這邊的條件就是\n",
+    "    # k.shift(1) 可以想成「昨天」的意思，同理 k.shift(2) 就是前天\n",
+    "    # 當（今天的 k < d ）且 （昨天的 k > d） 且 （今天的 k < 30） 時，賣出入\n",
+    "\n",
+    "    buy = (k < d) & (k.shift(1) > d.shift(1)) & (k >= 80)\n",
+    "  \n",
+    "    if buy[str(datetime.date.today())]:\n",
+    "        print(stockId+\"(\"+ str(price1[stockId].mean())+\"): \"+\"https://goodinfo.tw/StockInfo/StockDetail.asp?STOCK_ID=\" + stockId)\n",
+    "print(\"============================\")    \n",
+    "\n",
+    "\n",
+    "print(\"\")\n",
+    "print(\"投機停利(移動式停利，高點跌下來 10%)\")\n",
+    "for stockId in opportunisticStockPricePair:\n",
+    "    belowHighest10PercentPrice = price1[stockId].mean() < price20[stockId].max() * 0.9\n",
+    "    if belowHighest10PercentPrice:\n",
+    "        print(stockId+\"(\"+ str(price1[stockId].mean())+\"): \"+\"https://goodinfo.tw/StockInfo/StockDetail.asp?STOCK_ID=\" + stockId)\n",
+    "print(\"============================\")    \n"
    ]
   },
   {
@@ -156,15 +358,6 @@
    "outputs": [],
    "source": [
     "# 將結果送到 IM"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# 停利 停損計算"
    ]
   }
  ],
@@ -184,7 +377,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
