--- a/CrawlAndCount.ipynb
+++ b/CrawlAndCount.ipynb
@@ -2,53 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0067e89e510649b0b4ee072adf84de3b",
+       "model_id": "03633540f9df4252a872a17ff48882de",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "VBox(children=(Label(value='price (from 2020-01-02 to 2021-06-01)'), HBox(children=(DatePicker(value=datetime.…"
+       "VBox(children=(Label(value='price (from 2020-01-02 to 2021-06-04)'), HBox(children=(DatePicker(value=datetime.…"
       ]
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "start crawl price from  2021-06-01 to 2021-06-02\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ed588c78df504855885cd95dba25f409",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/2 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "crawling 2021-06-01\n",
-      "success\n",
-      "crawling 2021-06-02\n",
-      "success\n"
-     ]
     }
    ],
    "source": [
@@ -73,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 47,
    "metadata": {
     "scrolled": true
    },
@@ -82,8 +51,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2021-06-02\n",
-      "# 20 日線的股票\n"
+      "5 日內 5 日線大於 20 日線\n",
+      "中華電(114.0): https://goodinfo.tw/StockInfo/StockDetail.asp?STOCK_ID=2412\n",
+      "玉山金(25.95): https://goodinfo.tw/StockInfo/StockDetail.asp?STOCK_ID=2884\n",
+      "台灣大(101.0): https://goodinfo.tw/StockInfo/StockDetail.asp?STOCK_ID=3045\n",
+      "遠傳(65.5): https://goodinfo.tw/StockInfo/StockDetail.asp?STOCK_ID=4904\n",
+      "福懋(30.9): https://goodinfo.tw/StockInfo/StockDetail.asp?STOCK_ID=1434\n",
+      "亞德客-KY(960.0): https://goodinfo.tw/StockInfo/StockDetail.asp?STOCK_ID=1590\n",
+      "中碳(111.0): https://goodinfo.tw/StockInfo/StockDetail.asp?STOCK_ID=1723\n",
+      "為升(196.0): https://goodinfo.tw/StockInfo/StockDetail.asp?STOCK_ID=2231\n",
+      "潤泰全(83.5): https://goodinfo.tw/StockInfo/StockDetail.asp?STOCK_ID=2915\n",
+      "瑞儀(118.5): https://goodinfo.tw/StockInfo/StockDetail.asp?STOCK_ID=6176\n",
+      "中保科(92.4): https://goodinfo.tw/StockInfo/StockDetail.asp?STOCK_ID=9917\n"
      ]
     }
    ],
@@ -128,16 +107,21 @@
     "        \"8341\": \"日友\", \"8454\": \"富邦媒\", \"8464\": \"億豐\"\n",
     "        , \"9914\": \"美利達\", \"9917\": \"中保科\", \"9921\": \"巨大\", \"9933\": \"中鼎\", \"9941\": \"裕融\", \"9945\": \"潤泰新\"\n",
     "    }\n",
-    "# print(len(stock100List))\n",
+    "\n",
+    "# TODO 加入 0050 之類的 ETF\n",
+    "etfPair = { \"0050\": \"0050\", \"0056\":\"0056\",\"006208\":\"富邦台50\",\"00881\":\"國泰台灣5G+\",\"00878\":\"國泰永續高股息\",\n",
+    "          \"00891\":\"中信關鍵半導體\"}\n",
     "\n",
     "allStockList = stock50Pair.copy()\n",
     "allStockList.update(stock100Pair)\n",
+    "allStockList.update(etfPair)\n",
     "# dict(list(stock50Pair.items()) + list(stock100Pair.items()))\n",
     "# print(len(allStockList))\n",
     "\n",
     "# 拿取資料\n",
     "data = Data()\n",
     "price60 = data.get('收盤價', 60 ) \n",
+    "price30 = data.get('收盤價', 30 ) \n",
     "price20 = data.get('收盤價', 20 ) \n",
     "price10 = data.get('收盤價', 10 ) \n",
     "price5 = data.get('收盤價', 5 ) \n",
@@ -149,6 +133,8 @@
     "# 走多頭的趨勢\n",
     "is1Large5 = price1[allStockList].mean() > price5[allStockList].mean()\n",
     "is5Large10 = price5[allStockList].mean() > price10[allStockList].mean()\n",
+    "is5Large20 = price5[allStockList].mean() > price20[allStockList].mean()\n",
+    "\n",
     "is10Large20 = price10[allStockList].mean() > price20[allStockList].mean()\n",
     "is20Large60 = price20[allStockList].mean() > price60[allStockList].mean()\n",
     "\n",
@@ -162,32 +148,60 @@
     "#         print(\"https://goodinfo.tw/StockInfo/StockDetail.asp?STOCK_ID=\" + stockId)\n",
     "\n",
     "\n",
+    "print(\"2 日內 5 日線大於 20 日線，找波動比較大的\")\n",
+    "shortUpStockSet = {}\n",
+    "shortUpStockBefore5Days = (price10[allStockList])[-7:-2].mean() < (price30[allStockList])[-22:-2].mean()\n",
+    "shortUpStockNow = price10[allStockList].mean() > price20[allStockList].mean()\n",
+    "isRecentlyUp = shortUpStockBefore5Days & shortUpStockNow\n",
     "\n",
-    "# 今日剛突破 20 日線 & 前一天前還沒突破 & 今日成交量比 20 日平均高\n",
-    "less20Before3Day = (price5[allStockList])[-2:-1].mean() < price20[allStockList].mean()\n",
-    "is1Large20 = price1[allStockList].mean() > price20[allStockList].mean() \n",
-    "is1VolumeLarge20 = valume1[allStockList].mean() > valume20[allStockList].mean() \n",
-    "\n",
-    "breakthrough20StockList = is1Large20 & less20Before3Day & is1VolumeLarge20\n",
-    "\n",
-    "\n",
-    "print(datetime.date.today())\n",
-    "print(\"# 20 日線的股票\")\n",
     "for stockId in allStockList:\n",
-    "    if(breakthrough20StockList[stockId]):\n",
-    "        print(allStockList[stockId]+\"(\"+ str(price1[stockId].mean())+\"): \"+\"https://goodinfo.tw/StockInfo/StockDetail.asp?STOCK_ID=\" + stockId)\n"
+    "    if(isRecentlyUp[stockId]):\n",
+    "        print(allStockList[stockId]+\"(\"+ str(price1[stockId].mean())+\"): \"+\"https://goodinfo.tw/StockInfo/StockDetail.asp?STOCK_ID=\" + stockId)\n",
+    "        \n",
+    "        \n",
+    "\n",
+    "# for stockId in isRecentlyUp:\n",
+    "#     if(upChoiceStocklist[stockId] == True):\n",
+    "#         print(allStockList[stockId]+\"(\"+ str(price1[stockId].mean())+\"): \"+\"https://goodinfo.tw/StockInfo/StockDetail.asp?STOCK_ID=\" + stockId)\n",
+    "        \n",
+    "# print((price10[allStockList])[-10:-5].)\n",
+    "\n",
+    "# for stockId in upStockList:\n",
+    "#     if(is5Large20[stockId]):\n",
+    "#         print(allStockList[stockId]+\"(\"+ str(price1[stockId].mean())+\"): \"+\"https://goodinfo.tw/StockInfo/StockDetail.asp?STOCK_ID=\" + stockId)\n",
+    "\n",
+    "# print(\"# 20 日線大於 60 日線\")\n",
+    "# for stockId in upStockList:\n",
+    "#     if(is20Large60[stockId]):\n",
+    "#         print(allStockList[stockId]+\"(\"+ str(price1[stockId].mean())+\"): \"+\"https://goodinfo.tw/StockInfo/StockDetail.asp?STOCK_ID=\" + stockId)\n",
+    "  \n",
+    "        \n",
+    "        \n",
+    "# # 今日剛突破 20 日線 & 前一天前還沒突破 & 今日成交量比 20 日平均高\n",
+    "# less20Before3Day = (price5[allStockList])[-2:-1].mean() < price20[allStockList].mean()\n",
+    "# is1Large20 = price1[allStockList].mean() > price20[allStockList].mean() \n",
+    "# is1VolumeLarge20 = valume1[allStockList].mean() > valume20[allStockList].mean() \n",
+    "\n",
+    "# breakthrough20StockList = is1Large20 & less20Before3Day \n",
+    "\n",
+    "\n",
+    "# print(datetime.date.today())\n",
+    "# print(\"# 20 日線的股票\")\n",
+    "# for stockId in allStockList:\n",
+    "#     if(breakthrough20StockList[stockId]):\n",
+    "#         print(allStockList[stockId]+\"(\"+ str(price1[stockId].mean())+\"): \"+\"https://goodinfo.tw/StockInfo/StockDetail.asp?STOCK_ID=\" + stockId)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2021-06-02\n",
+      "2021-06-06\n",
       "# KD 20 選股法\n",
       "End\n"
      ]
@@ -222,6 +236,7 @@
     "\n",
     "    buy = (k > d) & (k.shift(1) < d.shift(1)) & (k < 30)\n",
     "  \n",
+    "# \n",
     "    if buy[str(datetime.date.today())]:\n",
     "        print(allStockList[stockId]+\"(\"+ str(price1[stockId].mean())+\"): \"+\"https://goodinfo.tw/StockInfo/StockDetail.asp?STOCK_ID=\" + stockId)\n",
     " \n",
@@ -230,14 +245,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 5 日線突破 10 日線 (短線)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2021-06-02\n",
+      "2021-06-04\n",
       "20 日線停損(跌破 20 日線＆低於買進價 10%)\n",
       "============================\n",
       "\n",
@@ -270,7 +295,7 @@
     "kdStockPricePair = {}\n",
     "\n",
     "# 投機股票\n",
-    "opportunisticStockPricePair = {\"2610\" : 18 }\n",
+    "opportunisticStockPricePair = {\"2610\" : 20.8 }\n",
     "\n",
     "print(datetime.date.today())\n",
     "# 停損\n",
@@ -353,12 +378,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "# 將結果送到 IM"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
