Add new stock 2542

--- a/CrawlAndCount.ipynb
+++ b/CrawlAndCount.ipynb
@@ -2,22 +2,53 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "03633540f9df4252a872a17ff48882de",
+       "model_id": "0f450a98445e448da53c4c75fbae99e3",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "VBox(children=(Label(value='price (from 2020-01-02 to 2021-06-04)'), HBox(children=(DatePicker(value=datetime.…"
+       "VBox(children=(Label(value='price (from 2020-01-02 to 2021-06-09)'), HBox(children=(DatePicker(value=datetime.…"
       ]
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "start crawl price from  2021-06-09 to 2021-06-10\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "8a054d3abc4c4511814fc16d344ea192",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/2 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "crawling 2021-06-09\n",
+      "success\n",
+      "crawling 2021-06-10\n",
+      "success\n"
+     ]
     }
    ],
    "source": [
@@ -42,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 2,
    "metadata": {
     "scrolled": true
    },
@@ -51,18 +82,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "5 日內 5 日線大於 20 日線\n",
-      "中華電(114.0): https://goodinfo.tw/StockInfo/StockDetail.asp?STOCK_ID=2412\n",
-      "玉山金(25.95): https://goodinfo.tw/StockInfo/StockDetail.asp?STOCK_ID=2884\n",
-      "台灣大(101.0): https://goodinfo.tw/StockInfo/StockDetail.asp?STOCK_ID=3045\n",
-      "遠傳(65.5): https://goodinfo.tw/StockInfo/StockDetail.asp?STOCK_ID=4904\n",
-      "福懋(30.9): https://goodinfo.tw/StockInfo/StockDetail.asp?STOCK_ID=1434\n",
-      "亞德客-KY(960.0): https://goodinfo.tw/StockInfo/StockDetail.asp?STOCK_ID=1590\n",
-      "中碳(111.0): https://goodinfo.tw/StockInfo/StockDetail.asp?STOCK_ID=1723\n",
-      "為升(196.0): https://goodinfo.tw/StockInfo/StockDetail.asp?STOCK_ID=2231\n",
-      "潤泰全(83.5): https://goodinfo.tw/StockInfo/StockDetail.asp?STOCK_ID=2915\n",
-      "瑞儀(118.5): https://goodinfo.tw/StockInfo/StockDetail.asp?STOCK_ID=6176\n",
-      "中保科(92.4): https://goodinfo.tw/StockInfo/StockDetail.asp?STOCK_ID=9917\n"
+      "2 日內 20 日線大於 60 日線，找波動比較大的\n",
+      "遠東新(31.95): https://goodinfo.tw/StockInfo/StockDetail.asp?STOCK_ID=1402\n",
+      "遠傳(65.6): https://goodinfo.tw/StockInfo/StockDetail.asp?STOCK_ID=4904\n",
+      "致茂(201.0): https://goodinfo.tw/StockInfo/StockDetail.asp?STOCK_ID=2360\n",
+      "技嘉(114.0): https://goodinfo.tw/StockInfo/StockDetail.asp?STOCK_ID=2376\n",
+      "華航(18.85): https://goodinfo.tw/StockInfo/StockDetail.asp?STOCK_ID=2610\n",
+      "長榮航(20.7): https://goodinfo.tw/StockInfo/StockDetail.asp?STOCK_ID=2618\n",
+      "南電(348.5): https://goodinfo.tw/StockInfo/StockDetail.asp?STOCK_ID=8046\n",
+      "2 日內 5 日線大於 20 日線，找波動比較大的\n"
      ]
     }
    ],
@@ -84,7 +112,7 @@
     "        , \"2884\": \"玉山金\", \"2885\": \"元大金\", \"2886\": \"兆豐金\", \"2887\": \"台新金\", \"2888\": \"新光金\", \"2890\": \"永豐金\", \"2891\": \"中信金\",\n",
     "        \"2892\": \"第一金\", \"2912\": \"統一超\", \"3008\": \"大立光\"\n",
     "        , \"3045\": \"台灣大\", \"3711\": \"日月光投控\", \"4904\": \"遠傳\", \"4938\": \"和碩\", \"5871\": \"中租-KY\", \"5876\": \"上海商銀\", \"5880\": \"合庫金\",\n",
-    "        \"6505\": \"台塑化\", \"9904\": \"寶成\", \"9910\": \"豐泰\"}\n",
+    "        \"6505\": \"台塑化\", \"9904\": \"寶成\", \"9910\": \"豐泰\", \"2603\": \"長榮\", \"2609\":\"陽明\", \"2615\":\"萬海\" }\n",
     "\n",
     "stock100Pair = {\n",
     "        \"1210\": \"大成\", \"1227\": \"佳格\", \"1319\": \"東陽\", \"1434\": \"福懋\", \"1476\": \"儒鴻\", \"1477\": \"聚陽\", \"1504\": \"東元\", \"1536\": \"和大\",\n",
@@ -110,7 +138,8 @@
     "\n",
     "# TODO 加入 0050 之類的 ETF\n",
     "etfPair = { \"0050\": \"0050\", \"0056\":\"0056\",\"006208\":\"富邦台50\",\"00881\":\"國泰台灣5G+\",\"00878\":\"國泰永續高股息\",\n",
-    "          \"00891\":\"中信關鍵半導體\"}\n",
+    "          \"00891\":\"中信關鍵半導體\", \"00757\":\"統一FANG+\"}\n",
+    "# //,\"00888\":\"永豐台灣ESG\"\n",
     "\n",
     "allStockList = stock50Pair.copy()\n",
     "allStockList.update(stock100Pair)\n",
@@ -120,6 +149,7 @@
     "\n",
     "# 拿取資料\n",
     "data = Data()\n",
+    "price70 = data.get('收盤價', 60 ) \n",
     "price60 = data.get('收盤價', 60 ) \n",
     "price30 = data.get('收盤價', 30 ) \n",
     "price20 = data.get('收盤價', 20 ) \n",
@@ -148,15 +178,27 @@
     "#         print(\"https://goodinfo.tw/StockInfo/StockDetail.asp?STOCK_ID=\" + stockId)\n",
     "\n",
     "\n",
-    "print(\"2 日內 5 日線大於 20 日線，找波動比較大的\")\n",
+    "print(\"2 日內 20 日線大於 60 日線，找波動比較大的\")\n",
     "shortUpStockSet = {}\n",
-    "shortUpStockBefore5Days = (price10[allStockList])[-7:-2].mean() < (price30[allStockList])[-22:-2].mean()\n",
-    "shortUpStockNow = price10[allStockList].mean() > price20[allStockList].mean()\n",
+    "shortUpStockBefore5Days = (price30[allStockList])[-22:-2].mean() < (price70[allStockList])[-62:-2].mean()\n",
+    "shortUpStockNow = price20[allStockList].mean() > price60[allStockList].mean()\n",
     "isRecentlyUp = shortUpStockBefore5Days & shortUpStockNow\n",
     "\n",
     "for stockId in allStockList:\n",
     "    if(isRecentlyUp[stockId]):\n",
     "        print(allStockList[stockId]+\"(\"+ str(price1[stockId].mean())+\"): \"+\"https://goodinfo.tw/StockInfo/StockDetail.asp?STOCK_ID=\" + stockId)\n",
+    "        \n",
+    "\n",
+    "print(\"2 日內 5 日線大於 20 日線，找波動比較大的\")\n",
+    "shortUpStockSet = {}\n",
+    "shortUpStockBefore5Days = (price10[allStockList])[-7:-2].mean() < (price30[allStockList])[-22:-2].mean()\n",
+    "shortUpStockNow = price5[allStockList].mean() > price20[allStockList].mean()\n",
+    "isRecentlyUp = shortUpStockBefore5Days & shortUpStockNow\n",
+    "\n",
+    "for stockId in allStockList:\n",
+    "    if(isRecentlyUp[stockId]):\n",
+    "        print(allStockList[stockId]+\"(\"+ str(price1[stockId].mean())+\"): \"+\"https://goodinfo.tw/StockInfo/StockDetail.asp?STOCK_ID=\" + stockId)\n",
+    "          \n",
     "        \n",
     "        \n",
     "\n",
@@ -194,14 +236,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2021-06-06\n",
+      "2021-06-10\n",
       "# KD 20 選股法\n",
       "End\n"
      ]
@@ -245,24 +287,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# 5 日線突破 10 日線 (短線)\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2021-06-04\n",
+      "2021-06-10\n",
       "20 日線停損(跌破 20 日線＆低於買進價 10%)\n",
       "============================\n",
       "\n",
@@ -292,26 +324,26 @@
     "bandStockPricePair = {\"2027\" : 48}\n",
     "\n",
     "# KD 20 波段股票\n",
-    "kdStockPricePair = {}\n",
+    "kdStockPricePair = {\"2542\" : 42.46 }\n",
     "\n",
     "# 投機股票\n",
-    "opportunisticStockPricePair = {\"2610\" : 20.8 }\n",
+    "opportunisticStockPricePair = {\"2610\" : 20.8 , \"2603\": 110 }\n",
     "\n",
     "print(datetime.date.today())\n",
     "# 停損\n",
     "print(\"20 日線停損(跌破 20 日線＆低於買進價 10%)\")\n",
     "for stockId in bandStockPricePair:\n",
     "    below20Price = price1[stockId].mean() < price20[stockId].mean()\n",
-    "    beyond10Percent = price1[stockId].mean() < bandStockPricePair[stockId] * 0.9\n",
+    "    beyond10Percent = price1[stockId].mean() < (bandStockPricePair[stockId] * 0.9)\n",
     "    if(below20Price & beyond10Percent):\n",
     "        print(stockId+\"(\"+ str(price1[stockId].mean())+\"): \"+\"https://goodinfo.tw/StockInfo/StockDetail.asp?STOCK_ID=\" + stockId)\n",
     "print(\"============================\")    \n",
     "\n",
     "\n",
     "print(\"\")\n",
-    "print(\"kd 停損(低於買進價 15%)\")\n",
+    "print(\"kd 停損(低於買進價 10%)\")\n",
     "for stockId in kdStockPricePair:\n",
-    "    beyond10Percent = price1[stockId].mean() < kdStockPricePair[stockId] * 0.85\n",
+    "    beyond10Percent = price1[stockId].mean() < kdStockPricePair[stockId] * 0.90\n",
     "    if(beyond10Percent):\n",
     "        print(stockId+\"(\"+ str(price1[stockId].mean())+\"): \"+\"https://goodinfo.tw/StockInfo/StockDetail.asp?STOCK_ID=\" + stockId)\n",
     "print(\"============================\")    \n",
@@ -319,9 +351,9 @@
     "\n",
     "\n",
     "print(\"\")\n",
-    "print(\"投機停損(低於買進價 15%)\")\n",
+    "print(\"投機停損(低於買進價 20%)\")\n",
     "for stockId in opportunisticStockPricePair:\n",
-    "    beyond10Percent = price1[stockId].mean() < opportunisticStockPricePair[stockId] * 0.85\n",
+    "    beyond10Percent = price1[stockId].mean() < opportunisticStockPricePair[stockId] * 0.8\n",
     "    if(beyond10Percent):\n",
     "        print(stockId+\"(\"+ str(price1[stockId].mean())+\"): \"+\"https://goodinfo.tw/StockInfo/StockDetail.asp?STOCK_ID=\" + stockId)\n",
     "print(\"============================\")    \n",
