--- a/CrawlAndCount.ipynb
+++ b/CrawlAndCount.ipynb
@@ -8,12 +8,26 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0f450a98445e448da53c4c75fbae99e3",
+       "model_id": "d51067f2ff4142f18e14579dace0aec7",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "VBox(children=(Label(value='price (from 2020-01-02 to 2021-06-09)'), HBox(children=(DatePicker(value=datetime.…"
+       "VBox(children=(Label(value='price (from 2020-01-02 to 2021-06-18)'), HBox(children=(DatePicker(value=datetime.…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "26445201d9ea43d0bbf4215c163d64ed",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "VBox(children=(Label(value='cement (from 2020-01-02 to 2020-01-02)'), HBox(children=(DatePicker(value=datetime…"
       ]
      },
      "metadata": {},
@@ -23,18 +37,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "start crawl price from  2021-06-09 to 2021-06-10\n"
+      "start crawl price from  2021-06-18 to 2021-06-21\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8a054d3abc4c4511814fc16d344ea192",
+       "model_id": "b75a28443631438f8e8695c8ad5eefba",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "  0%|          | 0/2 [00:00<?, ?it/s]"
+       "  0%|          | 0/4 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
@@ -44,9 +58,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "crawling 2021-06-09\n",
+      "crawling 2021-06-18\n",
       "success\n",
-      "crawling 2021-06-10\n",
+      "crawling 2021-06-19\n",
+      "fail, check if it is a holiday\n",
+      "crawling 2021-06-20\n",
+      "fail, check if it is a holiday\n",
+      "crawling 2021-06-21\n",
       "success\n"
      ]
     }
@@ -56,7 +74,7 @@
     "    widget, \n",
     "    \n",
     "    crawl_price, \n",
-    "    crawl_monthly_report, \n",
+    "    crawl_cement, \n",
     "    crawl_finance_statement_by_date,\n",
     "    \n",
     "    date_range, month_range, season_range\n",
@@ -67,13 +85,13 @@
     "conn = sqlite3.connect(os.path.join('data', \"data.db\"))\n",
     "\n",
     "widget(conn, 'price', crawl_price, date_range)\n",
-    "# widget(conn, 'monthly_revenue', crawl_monthly_report, month_range)\n",
+    "widget(conn, 'cement', crawl_cement, date_range)\n",
     "# widget(conn, 'finance_statement', crawl_finance_statement_by_date, season_range)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "scrolled": true
    },
@@ -83,14 +101,15 @@
      "output_type": "stream",
      "text": [
       "2 日內 20 日線大於 60 日線，找波動比較大的\n",
-      "遠東新(31.95): https://goodinfo.tw/StockInfo/StockDetail.asp?STOCK_ID=1402\n",
-      "遠傳(65.6): https://goodinfo.tw/StockInfo/StockDetail.asp?STOCK_ID=4904\n",
-      "致茂(201.0): https://goodinfo.tw/StockInfo/StockDetail.asp?STOCK_ID=2360\n",
-      "技嘉(114.0): https://goodinfo.tw/StockInfo/StockDetail.asp?STOCK_ID=2376\n",
-      "華航(18.85): https://goodinfo.tw/StockInfo/StockDetail.asp?STOCK_ID=2610\n",
-      "長榮航(20.7): https://goodinfo.tw/StockInfo/StockDetail.asp?STOCK_ID=2618\n",
-      "南電(348.5): https://goodinfo.tw/StockInfo/StockDetail.asp?STOCK_ID=8046\n",
-      "2 日內 5 日線大於 20 日線，找波動比較大的\n"
+      "台塑(100.0): https://goodinfo.tw/StockInfo/StockDetail.asp?STOCK_ID=1301\n",
+      "聯電(51.2): https://goodinfo.tw/StockInfo/StockDetail.asp?STOCK_ID=2303\n",
+      "台積電(583.0): https://goodinfo.tw/StockInfo/StockDetail.asp?STOCK_ID=2330\n",
+      "東元(33.6): https://goodinfo.tw/StockInfo/StockDetail.asp?STOCK_ID=1504\n",
+      "0050(134.7): https://goodinfo.tw/StockInfo/StockDetail.asp?STOCK_ID=0050\n",
+      "富邦台50(77.5): https://goodinfo.tw/StockInfo/StockDetail.asp?STOCK_ID=006208\n",
+      "2 日內 5 日線大於 20 日線，找波動比較大的\n",
+      "統一(72.6): https://goodinfo.tw/StockInfo/StockDetail.asp?STOCK_ID=1216\n",
+      "廣達(87.1): https://goodinfo.tw/StockInfo/StockDetail.asp?STOCK_ID=2382\n"
      ]
     }
    ],
@@ -243,8 +262,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2021-06-10\n",
+      "2021-06-21\n",
       "# KD 20 選股法\n",
+      "中信金(22.25): https://goodinfo.tw/StockInfo/StockDetail.asp?STOCK_ID=2891\n",
       "End\n"
      ]
     }
@@ -294,17 +314,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2021-06-10\n",
+      "2021-06-21\n",
       "20 日線停損(跌破 20 日線＆低於買進價 10%)\n",
       "============================\n",
       "\n",
-      "kd 停損(低於買進價 15%)\n",
+      "kd 停損(低於買進價 10%)\n",
       "============================\n",
       "\n",
-      "投機停損(低於買進價 15%)\n",
+      "投機停損(低於買進價 20%)\n",
       "============================\n",
       "\n",
       "20 日線停利(移動式停利，高點跌下來 10%\n",
+      "2027(43.8): https://goodinfo.tw/StockInfo/StockDetail.asp?STOCK_ID=2027\n",
       "============================\n",
       "\n",
       "kd 停利(KD 死亡交叉，K 大於 80)\n",
@@ -321,13 +342,13 @@
     "# {股票代號, 買時候的股價}\n",
     "\n",
     "# 20 日線 波段股票\n",
-    "bandStockPricePair = {\"2027\" : 48}\n",
+    "bandStockPricePair = {\"2027\" : 48, \"3005\": 54.3}\n",
     "\n",
     "# KD 20 波段股票\n",
-    "kdStockPricePair = {\"2542\" : 42.46 }\n",
+    "kdStockPricePair = {\"2382\" : 88.28 }\n",
     "\n",
     "# 投機股票\n",
-    "opportunisticStockPricePair = {\"2610\" : 20.8 , \"2603\": 110 }\n",
+    "opportunisticStockPricePair = {\"2610\" : 20.8 , \"2603\": 132 }\n",
     "\n",
     "print(datetime.date.today())\n",
     "# 停損\n",
